# Lib-LoRa

./: .gitmodules  CMakeLists.txt  README.md
include/: LoRaBandwidth.h  LoRaDevice.h  LoRaError.h  LoRaMode.h  LoRaRegister.h  LoRaState.h
src/: CMakeLists.txt  LoRaDevice.cpp  LoRaError.cpp
test/: CMakeLists.txt  runtest.ps1  runtest.sh  test_main.cpp
